--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="src/style.css">
     <title>Todo.js</title>
   </head>
   <body>
-    <div>
+    <div class="input">
       <input placeholder="Todoを入力" />
       <button>追加</button>
     </div>
-    <div>
-      <p>未完了のTodo</p>
+    <div class="incomplete">
+      <p class="title">未完了のTodo</p>
       <ul>
         <li>
-          <div>
+          <div class="row">
             <p>Todoです</ｐ>
             <button>完了</button>
             <button>削除</button>
@@ -23,11 +24,11 @@
         </li>
       </ul>
     </div>
-    <div>
-      <p>完了したTodo</p>
+    <div class="complete">
+      <p class="title">完了したTodo</p>
       <ul>
         <li>
-        <div>
+        <div class="row">
           <p>Todoでした</p>
           <button>戻す</button>
         </div>
