--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <div class="input">
-      <input placeholder="Todoを入力" />
-      <button>追加</button>
+      <input id="add_txt" placeholder="Todoを入力" />
+      <button id="add_btn">追加</button>
     </div>
     <div class="incomplete">
       <p class="title">未完了のTodo</p>
-      <ul>
+      <ul id="incomplete_list" >
         <li>
           <div class="row">
             <p>Todoです</ｐ>
