JS_practice_Todoの完成

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/style.css" />
     <title>Todo.js</title>
   </head>
   <body>
@@ -14,26 +14,11 @@
     </div>
     <div class="incomplete">
       <p class="title">未完了のTodo</p>
-      <ul id="incomplete_list" >
-        <li>
-          <div class="row">
-            <p>Todoです</ｐ>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
-      </ul>
+      <ul id="incomplete_list"></ul>
     </div>
     <div class="complete">
       <p class="title">完了したTodo</p>
-      <ul>
-        <li>
-        <div class="row">
-          <p>Todoでした</p>
-          <button>戻す</button>
-        </div>
-        </li>
-      </ul>
+      <ul id="complete_list"></ul>
     </div>
 
     <script src="src/index.js"></script>
